--- a/lib/etc/code/fortran/templates/template_dlsym_interface.jinja
+++ b/lib/etc/code/fortran/templates/template_dlsym_interface.jinja
@@ -42,7 +42,7 @@ if(!interface_handle_f)
 
 {% for func in funcs %} 
 {% if  conf[func['name']] is not defined or  conf[func['name']]['Application'] is not defined or conf[func['name']]['Application']['C'] is not defined or conf[func['name']]['Application']['C']['generated'] != "False" or conf[func['name']]['Application']['C']['file'] is defined -%}
-    INTERF_F_LOCAL_{{func['name']}}=dlsym(interface_handle_f,"A_f_{{func['name']}}");
+    INTERF_F_LOCAL_{{func['name']}}=dlsym(interface_handle_f,"_{{func['name']}}");
 {% endif %}
 {%- endfor -%}
 #else
