--- a/lib/etc/code/fortran/templates/template_interface_entry.jinja
+++ b/lib/etc/code/fortran/templates/template_interface_entry.jinja
@@ -3,8 +3,7 @@
 #include <stdio.h>
 #include <dlfcn.h>
 #include "manual_interface.h"
-
-void *mpi_comm_null_copy_fn_=NULL;
+/*
 void *mpi_comm_null_copy_fn_=NULL;
 void *mpi_win_dup_fn_=NULL;
 void *mpi_null_copy_fn_=NULL;
@@ -17,7 +16,7 @@ void *mpi_conversion_fn_null_=NULL;
 void *mpi_win_null_delete_fn_=NULL;
 void *mpi_type_null_delete_fn_=NULL;
 void *mpi_type_dup_fn_=NULL;
-void *mpi_win_null_copy_fn_=NULL;
+void *mpi_win_null_copy_fn_=NULL;*/
 /*ompi constante*/
 int mpi_fortran_bottom_;
 int mpi_fortran_in_place_;
